5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3512/executions/1756_1577.log
== TEST (2019-05-28 20:09:49) 
-- CODE:
n1= int(input("Digite: "))
n2= int(input("Digite: "))

for i in range(n1,n2+1):
	if (i%6==0):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1= int(input())
ValueError: invalid literal for int() with base 10: '1.2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:10:16) 
-- CODE:
n1= int(input("Digite: "))
n2= int(input("Digite: "))

for i in range(n1,n2+1):
	if (i%6==0):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1= int(input())
ValueError: invalid literal for int() with base 10: '1.2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:10:24) 
-- CODE:
n1= int(input("Digite: "))
n2= int(input("Digite: "))

for i in range(n1,n2+1):
	if (i%6==0):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1= int(input())
ValueError: invalid literal for int() with base 10: '1.2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:52:46) 
-- CODE:
from numpy import *

anderson= float(input("T: "))
vetzones= float(input("O: "))
lindones= int(input  ("P: "))

cont= arange(num, dtype=int)
div= zeros(num, dtype=float)


d(t)= ((anderson*(cont**2)/ 2 ) + vetzones*cont)

print(t(v))
-- ERROR:
File "XXXX", line 11
    d(t)= ((anderson*(cont**2)/ 2 ) + vetzones*cont)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:53:22) 
-- CODE:
from numpy import *

anderson= float(input("T: "))
vetzones= float(input("O: "))
lindones= int(input  ("P: "))

cont= arange(num, dtype=int)
div= zeros(num, dtype=float)


demfuncao= ((anderson*(cont**2)/ 2 ) + vetzones*cont)

print(t(v))
-- EXECUTION TIME:
0.46419
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1577/main.py", line 7, in <module>
    cont= arange(num, dtype=int)
NameError: name 'num' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:53:26) 
-- CODE:
from numpy import *

anderson= float(input("T: "))
vetzones= float(input("O: "))
lindones= int(input  ("P: "))

cont= arange(num, dtype=int)
div= zeros(num, dtype=float)


demfuncao= ((anderson*(cont**2)/ 2 ) + vetzones*cont)

print(t(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:54:07) 
-- CODE:
from numpy import *

anderson= float(input("T: "))
vetzones= float(input("O: "))
lindones= int(input  ("P: "))

cont= arange(num, dtype=int)
div= zeros(num, dtype=float)


demfuncao= (anderson*(cont**2)/ 2 ) + vetzones*cont

print(t(v))
-- EXECUTION TIME:
0.386887
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1577/main.py", line 7, in <module>
    cont= arange(num, dtype=int)
NameError: name 'num' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:54:50) 
-- CODE:
from numpy import *

anderson= float(input("T: "))
vetzones= float(input("O: "))
lindones= int(input  ("P: "))

cont= arange(lindones, dtype=int)
div= zeros(lindones, dtype=float)


demfuncao= (anderson*(cont**2)/ 2 ) + vetzones*cont

print(t(v))
-- EXECUTION TIME:
0.352203
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1577/main.py", line 13, in <module>
    print(t(v))
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:54:55) 
-- CODE:
from numpy import *

anderson= float(input("T: "))
vetzones= float(input("O: "))
lindones= int(input  ("P: "))

cont= arange(lindones, dtype=int)
div= zeros(lindones, dtype=float)


demfuncao= (anderson*(cont**2)/ 2 ) + vetzones*cont

print(t(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:55:28) 
-- CODE:
from numpy import *

anderson= float(input("T: "))
vetzones= float(input("O: "))
lindones= int(input  ("P: "))

cont= arange(lindones, dtype=int)
div= zeros(lindones, dtype=float)


demfuncao= (anderson*(cont**2)/ 2 ) + vetzones*cont

print(demfuncao)
-- EXECUTION TIME:
0.479969
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
